<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">obehave</string>
    <string name="action_settings">Settings</string>
    <!-- Main Activity -->
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="aktion_kodieren">kodieren</string>
    <string name="bc_group_fragment_subject">Subject Groups</string>
    <string name="open_study">Open study</string>
    <string name="new_obeservation">New observation</string>
    <string name="edit_observation">Edit observation</string>
    <string name="accept">Accept</string>
    <string name="uncategorized">uncategorized</string>
    <string name="title_activity_open_observation">OpenObservationActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">All</string>
    <string name="title_section2">Running</string>
    <string name="title_section3">Create</string>
    <string name="action_example">Example action</string>
    <string name="title_load_coding_schema">Load Coding Schema</string>
    <string name="title_activity_open_coding_schema">OpenCodingSchemaActivity</string>
    <string name="label_sort">Sort</string>
    <string name="sort_prompt">Choose sort order</string>

    <string-array name="sort_entries">
        <item>Wie am Desktop</item>
        <item>Alphabetisch A-Z</item>
        <item>Alphabetisch Z-A</item>
    </string-array>

    <string name="title_activity_start">Choose Study</string>
    <string name="hello_world">Hello world!</string>
    <string name="info_start">Before you can start coding, you must choose a study. Please click the button below.</string>
    <string name="btn_choose_study">Choose Study</string>
    <string name="btn_choose_study_from_file">Choose Study from File</string>
    <string name="btn_choose_study_wlan">Import File from WLAN</string>
    <string name="title_activity_observation">ObservationActivity</string>
    <string name="choose_main_subject">Choose Main Subject</string>

</resources>
