<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="org.obehave.android.ui.activities.OpenStudyActivity.ChooseFileFragment" android:orientation="vertical">

    <TextView
            android:text="@string/info_start"
            android:textAlignment="center"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginBottom="30dp"/>

    <Button android:id="@+id/btnChooseStudyFile" android:layout_width="match_parent" android:text="@string/btn_choose_study_from_file" android:layout_height="wrap_content" android:layout_marginBottom="8dp"></Button>
    <Button android:id="@+id/btnChooseStudyWLAN" android:layout_width="match_parent" android:text="@string/btn_choose_study_wlan" android:layout_height="wrap_content" android:layout_marginBottom="8dp"></Button>

</LinearLayout>
