<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity$CodingTableFragment">
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:layout_width="wrap_content" android:text="@string/start_button" android:layout_height="wrap_content" />
        <Button android:layout_width="wrap_content" android:text="@string/stop_button" android:layout_height="wrap_content" />
        <TextView android:layout_width="wrap_content" android:text="00:00:00" android:layout_height="wrap_content" android:layout_weight="1"/>
    </LinearLayout>
    <GridView android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="1" android:id="@+id/gvCoding">

    </GridView>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/aktion_kodieren" android:id="@+id/btnCoding" android:onClick="onCodingButtonClicked"/>
</LinearLayout>
